Fixing overflow

--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -12,7 +12,7 @@
         box-sizing: border-box;
         overflow-y: scroll;
         overflow-x: hidden;
-        
+        overscroll-behavior: none;
     }
     .wrapper::-webkit-scrollbar {
         display: none;
